--- a/views/grupo/vista-inicio-grupo.hbs
+++ b/views/grupo/vista-inicio-grupo.hbs
@@ -1,5 +1,5 @@
 <title>{{grupo.dataValues.asignatura}} {{grupo.dataValues.clave}} - Inicio - Seguimiento de Estudiantes</title>
-<div class="container bg-light p-2" style="height: content-box">
+<div class="container-fluid bg-light p-2" style="height: content-box">
     <!-- Barra de navegación -->
     <ul class="nav nav-tabs">
         <li class="nav-item">
