--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -11,7 +11,7 @@
                 <div class="card-body ">
                     <div class="row">
                         <div class="col-4">
-                            <label for="numerotema" class="form-label">Número</label>
+                            <label for="numerotema" class="form-label">Unidad</label>
                             <input type="number" min="1" step="1" class="form-control" value="1" name="numerotema"
                                    id="numerotema" required>
                         </div>
@@ -63,7 +63,10 @@
                             </select>
                         </div>
                     </div>
-
+                    <div class="row m-2 p-2">
+                        <label for="descripcionBox" class="form-label">Descripción</label>
+                        <textarea class="form-control" id="descripcionBox" name="descripcionBox"></textarea>
+                    </div>
                     <div class="row-cols-1  d-flex flex-row-reverse">
                         <div class="col-auto d-flex flex-row-reverse p-3" >
                             <div id="toolbar">
