--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,8 +1,5 @@
 <title>Mis Grupos - Seguimiento de Estudiantes</title>
-
-
-
-<div class="container p-2  h-100" style="height: max-content">
+<div class="container-fluid p-2  h-100" style="height: max-content">
     <ul class="nav nav-tabs ">
         <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/">Todos</a>
@@ -20,7 +17,7 @@
     </div>
     <div class="row m-2 p-2">
         {{#each grupos}}
-            <div class="col-md-4 col-4 col-xl-4 col-lg-4 col-sm-4 p-1" >
+            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1" >
                 <div class="card " style="height:28rem; ">
                     <div class="card-header d-flex flex-row-reverse">
                         <a class="bi bi-trash-fill " align="right" href="/abortar-grupo/{{dataValues.id}}"></a>
@@ -39,7 +36,7 @@
             </div>
 
         {{else}}
-            <div class="col-md-4 col-4 col-xl-4 col-lg-4 col-sm-4 p-1">
+            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
                 <div class="card" style="height:28rem ">
                     <div class="card-body">
                         <h5 class="card-title">No hay grupos existentes.</h5>
@@ -48,8 +45,7 @@
                 </div>
             </div>
         {{/each}}
-
-        <div class="col-md-4 col-4 col-xl-4 col-lg-4 col-sm-4 p-1">
+        <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
             <div class="card" style="height:28rem; ">
                 <div class="card-body justify-content-center align-center">
 
