--- a/views/grupo/datosgrupo.hbs
+++ b/views/grupo/datosgrupo.hbs
@@ -28,6 +28,10 @@
                 <input type="text" class="form-control" name="clave" id="clave" required>
             </div>
             <div class="col">
+                <label for="periodo" class="form-label">Periodo</label>
+                <input type="text" class="form-control" name="periodo" id="periodo" placeholder="Ej. ENE-JUN-2021" required>
+            </div>
+            <div class="col">
                 <label for="estado" class="form-label">Estado</label>
                 <select class="form-select custom-select" id="estado" name="estado" required>
                     <option value=0>Inactivo</option>
