--- a/views/index.hbs
+++ b/views/index.hbs
@@ -24,9 +24,11 @@
                         <a class="bi bi-pencil-square " align="right" href="#"></a>
                     </div>
 
-                    <img src="/img/{{dataValues.img}}.jpeg" class="card-img-top" alt="...">
+                    <img src="/img/{{dataValues.img}}.jpeg" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">{{dataValues.asignatura}} - <strong>{{dataValues.clave}}</strong></h5>
+                        <h5 class="card-title">{{dataValues.asignatura}}</h5>
+                        <h6>{{dataValues.periodo}}</h6>
+                        <h6><strong>{{dataValues.clave}}</strong></h6>
 
                     </div>
                     <div class="card-footer">
