--- a/views/tema/tema-nuevo.hbs
+++ b/views/tema/tema-nuevo.hbs
@@ -38,7 +38,7 @@
 
                 </div>
                 <div class="card-body">
-                    <div class="row">
+                    <div class="row m-0 p-0">
                         <div class="col-6">
                             <label for="nombreBox" class="form-label">Nombre</label>
                             <input type="text" class="form-control" name="nombreBox" id="nombreBox" required>
@@ -87,6 +87,7 @@
                                     <th data-field="nombreCol" data-sorteable="false">Nombre </th>
                                     <th data-field="valorCol" data-sorteable="false">Valor </th>
                                     <th data-field="tipoCol" data-sorteable="true">Tipo</th>
+                                    <th data-field="descripcionCol" data-sorteable="true">Descripción</th>
                                 </tr>
                                 </thead>
                                 <tbody>
