--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -16,7 +16,7 @@
         <script src="/js/popover-helper.js"></script>
 
         <nav class="navbar navbar-light bg-light">
-            <div class="container">
+            <div class="container-fluid">
                 <a class="navbar-brand bi bi-house-fill"  href="/">
                 </a>
             </div>
