--- a/views/grupo/vista-grupo-temas.hbs
+++ b/views/grupo/vista-grupo-temas.hbs
@@ -29,11 +29,13 @@
     <div class="row m-2 p-2">
         <!-- Generación de un card por tema -->
         {{#each tema}}
-            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1" >
+            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
                 <div class="card" style="height:14rem;">
                     <div class="card-header d-flex flex-row-reverse">
-                        <a class="bi bi-trash-fill " align="right" href="#"></a>
-                        <a class="bi bi-pencil-square " align="right" href="#"></a>
+                        <a class="bi bi-trash-fill " align="right" href="#" data-toggle="modal"
+                           data-target="#eliminarTema"></a>
+                        <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal"
+                           data-target="#editarTema"></a>
                     </div>
                     <div class="card-body">
                         <h5 class="card-title">{{dataValues.numerotema}}. {{dataValues.nombre}}</h5>
@@ -43,9 +45,9 @@
                     </div>
                 </div>
             </div>
-        <!-- En caso de que no existan temas se despliega un card con un mensaje -->
+            <!-- En caso de que no existan temas se despliega un card con un mensaje -->
         {{else}}
-            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1" >
+            <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1">
                 <div class="card" style="height:14rem;">
                     <div class="card-body">
                         <h5 class="card-title">No hay temas existentes en este grupo.</h5>
@@ -65,6 +67,47 @@
                     <div class="row justify-content-md-center align-items-center">
                         <a class="btn btn-success rounded-circle" href="/tema/nuevo-tema/{{idgrupo}}">+</a>
                     </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- modals -->
+    <div class="modal fade" id="eliminarTema" tabindex="-1" aria-labelledby="eliminarTema" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="eliminarTemaLabel">Eliminar tema</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro que desea eliminar el tema? Se eliminará permanentemente junto con las actividades
+                    relacionadas a él.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger">Eliminar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="editarTema" tabindex="-1" aria-labelledby="editarTema" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editarTemaLabel">Editar Tema</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro que desea editar el tema?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+                    <button type="button" class="btn btn-primary">Sí</button>
                 </div>
             </div>
         </div>
