--- a/views/index.hbs
+++ b/views/index.hbs
@@ -61,4 +61,46 @@
             </div>
         </div>
     </div>
+
+    <div class="modal fade" id="eliminarGrupo" tabindex="-1" aria-labelledby="eliminarGrupo" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="eliminarGrupoLabel">Eliminar Grupo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro que desea eliminar el grupo? Se moverá a la papelera de reciclaje.
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                    <button type="button" class="btn btn-danger">Eliminar</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editarGrupo" tabindex="-1" aria-labelledby="editarGrupo"
+         aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editarGrupoLabel">Editar Grupo</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    ¿Está seguro que desea editar el grupo?
+                </div>
+                <div class="modal-footer">
+                    <a type="button" class="btn btn-secondary" data-dismiss="modal">No</a>
+                    <button type="submit" class="btn btn-primary">Sí</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </div>
