--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,8 +20,8 @@
             <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1" >
                 <div class="card " style="height:28rem; ">
                     <div class="card-header d-flex flex-row-reverse">
-                        <a class="bi bi-trash-fill " align="right" href="/abortar-grupo/{{dataValues.id}}"></a>
-                        <a class="bi bi-pencil-square " align="right" href="#"></a>
+                        <a class="bi bi-trash-fill " align="right" data-toggle="modal" data-target="#eliminarGrupo"></a>
+                        <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal" data-target="#editarGrupo"></a>
                     </div>
 
                     <img src="/img/{{dataValues.img}}.jpeg" class="card-img-top">
