--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,8 +20,8 @@
             <div class="col-md-3 col-3 col-xl-3 col-lg-3 col-sm-3 p-1" >
                 <div class="card " style="height:28rem; ">
                     <div class="card-header d-flex flex-row-reverse">
-                        <a class="bi bi-trash-fill " align="right" data-toggle="modal" data-target="#eliminarGrupo"></a>
-                        <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal" data-target="#editarGrupo"></a>
+                        <a class="bi bi-trash-fill " align="right" data-toggle="modal" data-target="#eliminarGrupo{{dataValues.id}}"></a>
+                        <a class="bi bi-pencil-square " align="right" href="#" data-toggle="modal" data-target="#editarGrupo{{dataValues.id}}"></a>
                     </div>
 
                     <img src="/img/{{dataValues.img}}.jpeg" class="card-img-top">
@@ -33,6 +33,48 @@
                     </div>
                     <div class="card-footer">
                         <a href="/grupo-inicio/{{dataValues.id}}" class="btn btn-primary">Ver</a>
+                    </div>
+                </div>
+            </div>
+
+
+            <div class="modal fade" id="eliminarGrupo{{dataValues.id}}" tabindex="-1" aria-labelledby="eliminarGrupo{{dataValues.id}}" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="eliminarGrupoLabel">Eliminar Grupo</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            ¿Está seguro que desea eliminar el grupo? Se moverá a la papelera de reciclaje.
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+                            <button type="button" class="btn btn-danger">Eliminar</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="modal fade" id="editarGrupo{{dataValues.id}}" tabindex="-1" aria-labelledby="editarGrupo{{dataValues.id}}"
+                 aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="editarGrupoLabel">Editar Grupo</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            ¿Está seguro que desea editar el grupo?
+                        </div>
+                        <div class="modal-footer">
+                            <a type="button" class="btn btn-secondary" data-dismiss="modal">No</a>
+                            <a class="btn btn-primary" href="/grupo/editar/{{dataValues.id}}">Sí</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -62,45 +104,6 @@
         </div>
     </div>
 
-    <div class="modal fade" id="eliminarGrupo" tabindex="-1" aria-labelledby="eliminarGrupo" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="eliminarGrupoLabel">Eliminar Grupo</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ¿Está seguro que desea eliminar el grupo? Se moverá a la papelera de reciclaje.
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
-                    <button type="button" class="btn btn-danger">Eliminar</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
-    <div class="modal fade" id="editarGrupo" tabindex="-1" aria-labelledby="editarGrupo"
-         aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="editarGrupoLabel">Editar Grupo</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ¿Está seguro que desea editar el grupo?
-                </div>
-                <div class="modal-footer">
-                    <a type="button" class="btn btn-secondary" data-dismiss="modal">No</a>
-                    <button type="submit" class="btn btn-primary">Sí</button>
-                </div>
-            </div>
-        </div>
-    </div>
 
 </div>
